WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
278636
Regression(
282064@main
): WebContent processes suspend when shared by multiple web pages
https://bugs.webkit.org/show_bug.cgi?id=278636
Summary
Regression(282064@main): WebContent processes suspend when shared by multiple...
Charlie Wolfe
Reported
2024-08-25 19:09:43 PDT
rdar://134619952
Attachments
Add attachment
proposed patch, testcase, etc.
Charlie Wolfe
Comment 1
2024-08-25 19:18:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32695
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug